--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: hydecorp/hydejack@v9
+remote_theme: julianolf/jekyll-theme-8bit
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Brimbles's homepage
